--- a/Bai1/bai1.html
+++ b/Bai1/bai1.html
@@ -7,20 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <input
-      id="inputA"
-      type="number"
-      name="Nhập thẻ A"
-      placeholder="Nhập số A" />
-    <input
-      id="inputB"
-      type="number"
-      name="Nhập thể B"
-      placeholder="Nhập số B" />
-    <div>
-      <button id="caculate">Tính toán</button>
-    </div>
-    <div id="result">Kết quả phép tính</div>
+    <input id="inputA" type="number" placeholder="Nhập số A" />
+    <input id="inputB" type="Number" placeholder="Nhập số B" />
+    <button id="button">Tính 2 số</button>
+    <div id="tinhtoan"></div>
+
     <script src="bai1.js"></script>
   </body>
 </html>
