--- a/bai 4/bai4.html
+++ b/bai 4/bai4.html
@@ -15,13 +15,25 @@
         <input class="input" placeholder="Search User" />
       </div>
       <div class="menu-left">
-        <div class="link">Reputation</div>
-        <div class="link">New users</div>
-        <div class="link">Voters</div>
-        <div class="link">Editor</div>
-        <div class="link">Moderator</div>
+        <div class="link center">Reputation</div>
+        <div class="link self center">New users</div>
+        <div class="link center">Voters</div>
+        <div class="link center">Editor</div>
+        <div class="link center">Moderator</div>
       </div>
     </div>
-    <div class="list"></div>
+    <div class="list">
+      <div class="name-card">
+        <img src="Ellipse 1.png" />
+        <div card-inform>
+          <div>Lelah Nichols</div>
+          <div>Troy, MI</div>
+          <div class="tag-name">
+            <span>Cloth</span>
+            <span>Stempt</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
